--- a/justins-files/package.json
+++ b/justins-files/package.json
@@ -36,6 +36,7 @@
     "moment": "2.17.1",
     "mongoose": "4.8.7",
     "mongoose-mongodb-errors": "0.0.2",
+    "morgan": "^1.9.0",
     "multer": "1.3.0",
     "nodemailer": "3.1.5",
     "passport": "0.3.2",
